# snemo-sandbox

./: .gitignore  CMakeLists.txt  README.md
programs/: CMakeLists.txt  geiger_matrices.txt  generate_geiger_matrix.cxx  trigger_utils.h  trigger_word_simple_parse.cxx
resources/: All_Trigger_Logic.v  TPs_ZoneBuilder.v
